# developtools_profiler

./: OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  fixFileBlocking.patch  gitee.com_OHOS_STD_developtools_profiler_pulls_476.diff  https’  mem.patch  ohos.build
device/base/: BUILD.gn
device/base/include/: common.h  file_utility.h  logging.h  schedule_task_manager.h
device/base/src/: common.cpp  epoll_event_poller.cpp  event_notifier.cpp  file_utility.cpp  schedule_task_manager.cpp
device/base/test/: BUILD.gn
device/base/test/unittest/: common_test.cpp  schedule_task_manager_test.cpp  semaphore_test.cpp
device/cmds/: BUILD.gn
device/cmds/include/: command_line.h  parse_plugin_config.h
device/cmds/src/: command_param.cpp  main.cpp  parse_plugin_config.cpp
device/cmds/test/: BUILD.gn
device/cmds/test/unittest/: hiprofiler_cmd_test.cpp  parse_plugin_config_test.cpp
device/plugins/ftrace_plugin/tools/trace_converter/: BUILD.gn  event_formatter.cpp  event_formatter.h  main.cpp  trace_converter.cpp  trace_converter.h
device/plugins/native_daemon/: BUILD.gn
device/plugins/native_daemon/config/: hiprofiler_daemon.cfg
device/plugins/native_daemon/include/: call_stack.h  callstack.h  debug_logger.h  dwarf_encoding.h  elf_parser.h  get_thread_id.h  hashlist.h  hashlistpp.h  hook_common.h  hook_manager.h  hook_service.h  hook_standalone.h  mem_map_item.h  perf_event_record.h  perf_file_format.h  register.h  stack_data_repeater.h  stack_preprocess.h  symbols.h  symbols_file.h  utilities.h  virtual_runtime.h  virtual_thread.h
device/plugins/native_daemon/src/: call_stack.cpp  callstack.cpp  debug_logger.cpp  elf_file.cpp  elf_header.cpp  elf_symbol.cpp  get_thread_id.cpp  hook_manager.cpp  hook_service.cpp  hook_standalone.cpp  main.cpp  register.cpp  section_header.cpp  stack_data_repeater.cpp  stack_preprocess.cpp  symbols.cpp  symbols_file.cpp  utilities.cpp  virtual_runtime.cpp  virtual_thread.cpp
device/plugins/native_daemon/test/: BUILD.gn
hidebug/frameworks/native/: BUILD.gn  hidebug.cpp  hidebug_base.c  hidebug_base.cpp
hidebug/interfaces/js/kits/napi/: BUILD.gn  napi_hidebug.cpp
host/smartperf/trace_streamer/dubai_sdk/: BUILD.gn  main.cpp  ts.gni
host/smartperf/trace_streamer/dubai_sdk/base/: BUILD.gn  args_set.h  log.cpp  meta.cpp  meta.h  quatra_map.h  string_help.cpp  string_help.h  triple_map.h  ts_common.h
host/smartperf/trace_streamer/dubai_sdk/doc/: TraceStreamerSDK详细设计说明书.doc  wasm.md
host/smartperf/trace_streamer/dubai_sdk/ext/: BUILD.gn  sqlite_ext_funcs.cpp  sqlite_ext_funcs.h
host/smartperf/trace_streamer/dubai_sdk/filter/: clock_filter.cpp  clock_filter.h
host/smartperf/trace_streamer/dubai_sdk/include/: BUILD.gn  file.h  log.h  string_to_numerical.h
host/smartperf/trace_streamer/dubai_sdk/parser/: event_parser_base.h  (+3 more)
host/smartperf/trace_streamer/gn/: BUILD.gn  CONFIG.gn  wasm.gni
host/smartperf/trace_streamer/src/: BUILD.gn  main.cpp  trace_streamer.pro  ts.gni  version.cpp  version.h
protos/types/plugins/all_plugin_config/: BUILD.gn  all_plugin_common.proto  all_plugin_config.proto
trace_analyzer/prebuilts/gn/: BUILD.gn  BUILDCONFIG.gn
trace_analyzer/prebuilts/gn/toolchain/: BUILD.gn
trace_analyzer/src/: BUILD.gn  main.cpp  trace_streamer.cpp  trace_streamer.h  trace_streamer.pro  trace_streamer_filters.cpp  trace_streamer_filters.h  ts.gni
trace_analyzer/src/base/: BUILD.gn  args_set.h  base.pri  common.h  double_map.h  file.cpp  log.cpp  ts_common.h
trace_analyzer/src/cfg/: trace_streamer_cfg.cpp  trace_streamer_cfg.h
trace_analyzer/src/filter/: binder_filter.cpp  clock_filter.cpp  clock_filter.h  cpu_filter.cpp  cpu_filter.h  event_filter.cpp  event_filter.h  filter.pri  filter_base.h  filter_filter.cpp  filter_filter.h  irq_filter.h  measure_filter.cpp  measure_filter.h  process_filter.cpp  process_filter.h  slice_filter.cpp  slice_filter.h  symbols_filter.h
trace_analyzer/src/include/: log.h  string_to_numerical.h
trace_analyzer/src/multi_platform/: BUILD.gn  global.pri  protogen.pri
trace_analyzer/src/parser/: bytrace_parser.cpp  bytrace_parser.h  common_types.h  event_parser.cpp  event_parser.h  event_parser_base.h  parser.pri  print_event_parser.cpp  print_event_parser.h  thread_state.cpp  thread_state.h
trace_analyzer/src/parser/bytrace_parser/: bytrace_event_parser.cpp  bytrace_event_parser.h  bytrace_parser.cpp  bytrace_parser.h
trace_analyzer/src/parser/htrace_parser/: BUILD.gn  htrace_clock_detail_parser.cpp  htrace_clock_detail_parser.h  htrace_hilog_parser.cpp  htrace_hilog_parser.h  htrace_mem_parser.cpp  htrace_mem_parser.h  htrace_parser.cpp  htrace_parser.h  htrace_symbols_detail_parser.h
trace_analyzer/src/table/: args_table.h  bound_table.cpp  bound_table.h  callstack_table.cpp  callstack_table.h  clk_event_filter_table.cpp  clock_event_filter_table.h  cpu_measure_filter_table.cpp  cpu_measure_filter_table.h  data_dict_table.cpp  data_dict_table.h  data_type_table.h  filter_table.cpp  filter_table.h  instants_table.cpp  instants_table.h  internal_slice_table.cpp  internal_slice_table.h  internal_thread.cpp  internal_thread.h  measure_filter_table.cpp  measure_filter_table.h  measure_table.cpp  measure_table.h  process_filter_table.cpp  process_filter_table.h  process_measure_filter_table.cpp  process_measure_filter_table.h  process_table.cpp  process_table.h  range_table.cpp  range_table.h  raw_table.cpp  raw_table.h  sched_slice_table.cpp  sched_slice_table.h  symbols_table.cpp  table.pri  table_base.cpp  table_base.h  (+6 more)
trace_analyzer/src/trace_data/: trace_data_cache.cpp  trace_data_cache.h  trace_data_cache_base.cpp  trace_data_cache_base.h  trace_data_cache_reader.cpp  trace_data_cache_reader.h  trace_data_cache_writer.cpp  trace_data_cache_writer.h  trace_data_db.cpp  trace_data_db.h  trace_stdtype.cpp  trace_stdtype.h
trace_analyzer/src/trace_streamer/: trace_streamer_filters.cpp  trace_streamer_filters.h  trace_streamer_selector.cpp  trace_streamer_selector.h
trace_analyzer/test/test_fuzzer/htrace_fuzzer/: BUILD.gn  htrace_fuzzer.cpp  htrace_fuzzer.h
(+3555 files in other folders)
