# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../base/config.gni")

module_output_path = "${OHOS_PROFILER_TEST_MODULE_OUTPUT_PATH}/device"
config("module_private_config") {
  visibility = [ ":*" ]
  if (current_toolchain != host_toolchain) {
    defines = [ "HAVE_HILOG" ]
  }
}

ohos_unittest("hiprofiler_cmd_ut") {
  module_out_path = module_output_path
  sources = [
    "unittest/parse_plugin_config_test.cpp",
    "../src/parse_plugin_config.cpp",
  ]
  deps = [
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_shared",
    "${OHOS_PROFILER_3RDPARTY_PROTOBUF_DIR}:protobuf",
    "${OHOS_PROFILER_3RDPARTY_PROTOBUF_DIR}:protobuf_lite",
    "${OHOS_PROFILER_DIR}/device/base:hiprofiler_base",
    "${OHOS_PROFILER_DIR}/protos/services:profiler_services_proto",
    "${OHOS_PROFILER_DIR}/protos/services:service_types_proto",
    "${OHOS_PROFILER_DIR}/protos/types/plugins/cpu_data:cpu_data_cpp_standard",
    "${OHOS_PROFILER_DIR}/protos/types/plugins/diskio_data:diskio_data_cpp_standard",
    "${OHOS_PROFILER_DIR}/protos/types/plugins/ftrace_data/default:ftrace_data_cpp_standard",
    "${OHOS_PROFILER_DIR}/protos/types/plugins/hidump_data:hidump_data_cpp_standard",
    "${OHOS_PROFILER_DIR}/protos/types/plugins/hilog_data:hilog_data_cpp_standard",
    "${OHOS_PROFILER_DIR}/protos/types/plugins/hiperf_data:hiperf_data_cpp_standard",
    "${OHOS_PROFILER_DIR}/protos/types/plugins/hisysevent_data:hisysevent_data_cpp_standard",
    "${OHOS_PROFILER_DIR}/protos/types/plugins/memory_data:memory_data_cpp_standard",
    "${OHOS_PROFILER_DIR}/protos/types/plugins/native_hook:native_hook_cpp_standard",
    "${OHOS_PROFILER_DIR}/protos/types/plugins/network_data:network_data_cpp_standard",
    "${OHOS_PROFILER_DIR}/protos/types/plugins/process_data:process_data_cpp_standard",
  ]
  include_dirs = [
    "../include",
    "${OHOS_PROFILER_DIR}/device/base/include",
    "//third_party/openssl/include",
    "//third_party/googletest/googletest/include/gtest",
    "//third_party/bounds_checking_function/include",
  ]
  cflags = [
    "-Wno-inconsistent-missing-override",
    "-Dprivate=public",  #allow test code access private members
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  configs = [ ":module_private_config" ]
  subsystem_name = "${OHOS_PROFILER_SUBSYS_NAME}"
  part_name = "${OHOS_PROFILER_PART_NAME}"
}

group("unittest") {
  testonly = true
  deps = [ ":hiprofiler_cmd_ut" ]
}
