# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//developtools/profiler/hidebug/hidebug.gni")

ohos_source_set("libhidebug_source") {
  part_name = "profiler"
  include_dirs = [
    "//utils/native/base/include",
    "//developtools/profiler/hidebug/interfaces/native/innerkits/include",
  ]

  sources = [ "hidebug_base.cpp" ]

  deps = [ "//utils/native/base:utils" ]

  external_deps = [
    "hilog_native:libhilog",
    "init:libbegetutil",
  ]
}
