# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  is_debug = true
  is_clang = true
}

declare_args() {
  ar = "ar"
}

is_win = false
is_linux = false

if (target_os == "linux") {
    is_win = false
    is_linux = true
    is_clang = true
} else if (target_os == "windows"){
    is_win = true
    is_linux = false
    is_clang = true
} else {
    print("unknown platform " + target_os)
    exit(-1)
}

default_configs = [
  "//gn:debug_symbols",
  "//gn:default",
  "//gn:c++17",
  "//gn:extra_warnings",
  "//gn:no_exceptions",
  "//gn:no_rtti",
  "//gn:visibility_hidden",
]

if (!is_debug) {
  default_configs -= [ "//gn:debug_symbols" ]
  default_configs += [ "//gn:release" ]
}

set_defaults("source_set") {
  configs = default_configs
}

set_defaults("executable") {
  configs = default_configs
  configs += [ "//gn:executable" ]
}

set_default_toolchain("//gn/toolchain:gcc_like")
