# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("ts.gni")
if (use_wasm) {
  import("//gn/wasm.gni")
}
if (use_wasm) {
  ohos_source_set("trace_streamer_builtin") {
    sources = []
    include_dirs = []
    deps = []
    public_deps = []
  }
}
ohos_source_set("lib") {
  sources = [ "main.cpp" ]
  deps = [ ":trace_streamer_source" ]
  include_dirs = [
    "base",
    "..",
    "trace_streamer",
    "filter",
    "table",
    "trace_data",
    "include",
    "rpc",
    "./",
    "parser",
    "cfg",
    "parser/htrace_parser",
    "parser/htrace_parser/htrace_event_parser",
    "parser/htrace_parser/htrace_cpu_parser",
    "//third_party/sqlite/include",
    "${OHOS_PROTO_GEN}/types/plugins/memory_data",
    "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/${kernel_version}",
    "${OHOS_PROTO_GEN}/types/plugins/hilog_data",
    "${OHOS_PROTO_GEN}/types/plugins/native_hook",
    "${OHOS_PROTO_GEN}/types/plugins/hidump_data",
    "${OHOS_PROTO_GEN}/types/plugins/network_data",
    "${OHOS_PROTO_GEN}/types/plugins/cpu_data",
    "${OHOS_PROTO_GEN}/types/plugins/diskio_data",
    "${OHOS_PROTO_GEN}/types/plugins/process_data",
    "${OHOS_PROTO_GEN}",
    "//third_party/protobuf/src",
  ]
  if (with_perf) {
    include_dirs += [
      "parser/hiperf_parser",
      "parser/hiperf_parser/hiperf/linux",
      "parser/hiperf_parser/hiperf/include",
    ]
  }
  public_deps = []
}
ohos_source_set("trace_streamer_source") {
  sources = [
    "cfg/trace_streamer_config.cpp",
    "cfg/trace_streamer_config.h",
    "filter/args_filter.cpp",
    "filter/args_filter.h",
    "filter/binder_filter.cpp",
    "filter/binder_filter.h",
    "filter/clock_filter.cpp",
    "filter/clock_filter.h",
    "filter/cpu_filter.cpp",
    "filter/filter_base.cpp",
    "filter/filter_base.h",
    "filter/filter_filter.cpp",
    "filter/filter_filter.h",
    "filter/irq_filter.cpp",
    "filter/irq_filter.h",
    "filter/measure_filter.cpp",
    "filter/measure_filter.h",
    "filter/process_filter.cpp",
    "filter/process_filter.h",
    "filter/slice_filter.cpp",
    "filter/slice_filter.h",
    "filter/stat_filter.cpp",
    "filter/stat_filter.h",
    "filter/symbols_filter.cpp",
    "filter/symbols_filter.h",
    "filter/system_event_measure_filter.cpp",
    "filter/system_event_measure_filter.h",
    "parser/bytrace_parser/bytrace_event_parser.cpp",
    "parser/bytrace_parser/bytrace_event_parser.h",
    "parser/bytrace_parser/bytrace_parser.cpp",
    "parser/bytrace_parser/bytrace_parser.h",
    "parser/common_types.h",
    "parser/event_parser_base.cpp",
    "parser/event_parser_base.h",
    "parser/print_event_parser.cpp",
    "parser/print_event_parser.h",
    "parser/thread_state.cpp",
    "parser/thread_state.h",
    "rpc/http_server.cpp",
    "rpc/http_socket.cpp",
    "rpc/rpc_server.cpp",
    "table/args_table.cpp",
    "table/args_table.h",
    "table/callstack_table.cpp",
    "table/callstack_table.h",
    "table/clk_event_filter_table.cpp",
    "table/clk_event_filter_table.h",
    "table/clock_event_filter_table.cpp",
    "table/clock_event_filter_table.h",
    "table/cpu_measure_filter_table.cpp",
    "table/cpu_measure_filter_table.h",
    "table/cpu_usage_info_table.cpp",
    "table/cpu_usage_info_table.h",
    "table/data_dict_table.cpp",
    "table/data_dict_table.h",
    "table/data_type_table.cpp",
    "table/data_type_table.h",
    "table/disk_io_table.cpp",
    "table/disk_io_table.h",
    "table/filter_constraints.cpp",
    "table/filter_table.cpp",
    "table/filter_table.h",
    "table/hidump_table.cpp",
    "table/hidump_table.h",
    "table/index_map.cpp",
    "table/instants_table.cpp",
    "table/instants_table.h",
    "table/irq_table.cpp",
    "table/live_process_table.cpp",
    "table/live_process_table.h",
    "table/log_table.cpp",
    "table/log_table.h",
    "table/measure_filter_table.cpp",
    "table/measure_filter_table.h",
    "table/measure_table.cpp",
    "table/measure_table.h",
    "table/meta_table.cpp",
    "table/meta_table.h",
    "table/native_hook_frame_table.cpp",
    "table/native_hook_frame_table.h",
    "table/native_hook_table.cpp",
    "table/native_hook_table.h",
    "table/network_table.cpp",
    "table/network_table.h",
    "table/process_filter_table.cpp",
    "table/process_filter_table.h",
    "table/process_measure_filter_table.cpp",
    "table/process_measure_filter_table.h",
    "table/process_table.cpp",
    "table/process_table.h",
    "table/range_table.cpp",
    "table/raw_table.cpp",
    "table/raw_table.h",
    "table/sched_slice_table.cpp",
    "table/sched_slice_table.h",
    "table/stat_table.cpp",
    "table/stat_table.h",
    "table/symbols_table.cpp",
    "table/symbols_table.h",
    "table/system_call_table.cpp",
    "table/system_call_table.h",
    "table/system_event_filter_table.cpp",
    "table/table_base.cpp",
    "table/thread_filter_table.cpp",
    "table/thread_state_table.cpp",
    "table/thread_table.cpp",
    "trace_data/trace_data_cache.cpp",
    "trace_data/trace_data_cache.h",
    "trace_data/trace_data_cache_base.cpp",
    "trace_data/trace_data_cache_base.h",
    "trace_data/trace_data_cache_reader.cpp",
    "trace_data/trace_data_cache_reader.h",
    "trace_data/trace_data_cache_writer.cpp",
    "trace_data/trace_data_cache_writer.h",
    "trace_data/trace_data_db.cpp",
    "trace_data/trace_data_db.h",
    "trace_data/trace_stdtype.cpp",
    "trace_data/trace_stdtype.h",
    "trace_streamer/trace_streamer_filters.cpp",
    "trace_streamer/trace_streamer_filters.h",
    "trace_streamer/trace_streamer_selector.cpp",
    "trace_streamer/trace_streamer_selector.h",
  ]
  include_dirs = [
    "base",
    "..",
    "trace_streamer",
    "filter",
    "table",
    "trace_data",
    "include",
    "rpc",
    "./",
    "parser",
    "cfg",
    "parser/htrace_parser",
    "parser/htrace_parser/htrace_event_parser",
    "parser/htrace_parser/htrace_cpu_parser",
    "../prebuilts/emsdk/emsdk/emscripten/system/include",
    "//third_party/sqlite/include",
    "${OHOS_PROTO_GEN}/types/plugins/memory_data",
    "${OHOS_PROTO_GEN}/types/plugins/ftrace_data/${kernel_version}",
    "${OHOS_PROTO_GEN}/types/plugins/hilog_data",
    "${OHOS_PROTO_GEN}/types/plugins/native_hook",
    "${OHOS_PROTO_GEN}/types/plugins/hidump_data",
    "${OHOS_PROTO_GEN}/types/plugins/network_data",
    "${OHOS_PROTO_GEN}/types/plugins/cpu_data",
    "${OHOS_PROTO_GEN}/types/plugins/diskio_data",
    "${OHOS_PROTO_GEN}/types/plugins/process_data",
    "${OHOS_PROTO_GEN}",
    "//third_party/protobuf/src",
  ]
  if (with_perf) {
    sources += [
      "filter/perf_data_filter.cpp",
      "filter/perf_data_filter.h",
      "table/perf_call_chain_table.cpp",
      "table/perf_call_chain_table.h",
      "table/perf_files_table.cpp",
      "table/perf_files_table.h",
      "table/perf_report_table.cpp",
      "table/perf_report_table.h",
      "table/perf_sample_table.cpp",
      "table/perf_sample_table.h",
      "table/perf_thread_table.cpp",
      "table/perf_thread_table.h",
    ]
    include_dirs += [
      "parser/hiperf_parser",
      "parser/hiperf_parser/hiperf/linux",
      "parser/hiperf_parser/hiperf/kernel",
      "parser/hiperf_parser/hiperf/include",
      "//third_party/perf_include",
      "//third_party/perf_include/linux",
      "//third_party/perf_include/include",
    ]
  }
  deps = [
    "base:base",
    "ext:sqliteext",
    "include:ibase",
    "parser/htrace_parser:htrace_parser",
    "//third_party/sqlite:sqlite",
  ]
  if (with_perf) {
    deps += [ "parser/hiperf_parser:hiperf_parser" ]
  }

  if (use_wasm || enable_ts_utest) {
    sources += [
      "rpc/wasm_func.cpp",
      "rpc/wasm_func.h",
    ]
  }
  if (enable_ts_utest && !use_wasm) {
    cflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
    ]
    ldflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
      "--coverage",
    ]
  }
  public_deps = []
}
if (use_wasm) {
  wasm_lib("trace_streamer_builtin_wasm") {
    name = "trace_streamer_builtin"
    deps = [ ":lib" ]
  }
} else {
  if (!is_test && !is_fuzz) {
    executable("trace_streamer") {
      deps = [ ":lib" ]
    }
  }
}
